--- a/index.html
+++ b/index.html
@@ -1,171 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./src/index.css" />
-    <script
-      type="module"
-      src="https://unpkg.com/@rainbowapp/svg-icon.js/dist/svg-icon.min.js"
-    ></script>
-    <title>Rene</title>
-  </head>
-  <body>
-    <rnbw-banner></rnbw-banner>
-    <section class="box justify-stretch column align-center">
-      <div class="page">
-        <div class="column gap-m align-center">
-          <svg-icon src="./rene.svg"></svg-icon>
-          <h6 class="text-center">rené.css</h6>
-        </div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="./src/index.css" />
+        <link rel="icon" href="./images/favicon.png" />
+        <script
+            type="module"
+            src="https://unpkg.com/@rainbowapp/svg-icon.js/dist/svg-icon.min.js"></script>
+        <title>Rene</title>
+    </head>
+    <body>
+        <rnbw-banner></rnbw-banner>
+        <section class="box justify-stretch column align-center">
+            <div class="page">
+                <div class="column gap-m align-center">
+                    <svg-icon src="./rene.svg"></svg-icon>
+                    <h6 class="text-center">rené.css</h6>
+                </div>
 
-        <div class="column gap-xl">
-          <h1 class="text-center">design for intention and meaning</h1>
-          <h3 class="text-center">
-            René is a design system for styling clean, simple, lightweight
-            interfaces. It is the ultimate common ground for designers &
-            developers. It is a CSS framework, based on native HTML elements and
-            reusable classes. It is fully customizable with tokens and themes.
-            And easy syntax to quickly "get it.” No weird stuff.
-          </h3>
-        </div>
+                <div class="column gap-xl">
+                    <h1 class="text-center">
+                        design for intention<br />
+                        and meaning
+                    </h1>
+                    <h3 class="text-center">
+                        rené is a design system for styling clean, simple,
+                        lightweight interfaces. It is the ultimate common ground
+                        for designers & developers. is both a library and a
+                        framework. as a library, it offers ready-to-use elements
+                        and styles. as a framework, it gives a consistent
+                        structure for building and styling your apps. It is
+                        fully customizable. it's easy enough to quickly "get
+                        it.” no weird stuff.
+                    </h3>
+                </div>
+            </div>
+            <div class="page">
+                <nav class="box-l gap-xl">
+                    <a
+                        href="./getting-started.html"
+                        class="column radius-m padding-xl box-s gap-l color-primary"
+                        style="color: white">
+                        <div class="box">
+                            <svg-icon src="./images/arrow-right.svg"></svg-icon>
+                        </div>
 
-        <nav class="box-l gap-xl">
-          <div class="column radius-m border padding-xl box-s gap-l">
-            <div class="box">
-              <svg-icon src="./icons/arrow-right.svg"></svg-icon>
-            </div>
+                        <h6>get started</h6>
+                    </a>
 
-            <h6>getting started</h6>
-          </div>
+                    <a
+                        href="./styleguide.html"
+                        class="column color-secondary radius-m padding-xl box-s gap-l"
+                        style="color: white">
+                        <div class="box-l row justify-stretch gap-m">
+                            <div class="box">
+                                <svg-icon src="./images/shapes.svg"></svg-icon>
+                            </div>
+                        </div>
 
-          <div class="column radius-m border padding-xl box-s gap-l">
-            <div class="box-l row justify-stretch gap-m">
-              <div class="box">
-                <svg-icon src="./icons/shapes.svg"></svg-icon>
-              </div>
-            </div>
+                        <h6>styleguide</h6>
+                    </a>
+                    <div
+                        class="foreground-primary column radius-m border padding-xl box-xs gap-l">
+                        <div class="box">
+                            <svg-icon
+                                src="./images/code-brackets.svg"></svg-icon>
+                        </div>
 
-            <h6>styleguide</h6>
-          </div>
-          <div class="column radius-m border padding-xl box-xs gap-l">
-            <div class="box">
-              <svg-icon src="./icons/code-brackets.svg"></svg-icon>
+                        <h6>github ↗</h6>
+                    </div>
+                </nav>
             </div>
+            <div class="page">
+                <div class="column gap-xl">
+                    <div class="row gap-xl">
+                        <div class="box column">
+                            <h4>both a library and a framework</h4>
+                            <p>
+                                as a library, it offers ready-to-use elements
+                                and styles. as a framework, it gives a
+                                consistent structure for building and styling
+                                your apps.
+                            </p>
+                        </div>
+                        <div class="box column">
+                            <h4>design and code harmony</h4>
+                            <p>
+                                René is a CSS framework for styling clean,
+                                simple, lightweight interfaces. It is the
+                                ultimate common ground for designers &
+                                developers.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row gap-xl">
+                        <div class="box column">
+                            <h4>flexible and extensible</h4>
+                            <p>
+                                it's built to adapt to different design needs,
+                                allowing you to tweak as needed. moreover, you
+                                can extend its functionalities, adding features
+                                or customizing existing.
+                            </p>
+                        </div>
+                        <div class="box column">
+                            <h4>more with less</h4>
+                            <p>
+                                rene is lightweight, which means faster
+                                performance and fewer resources, which is ideal
+                                for slow connections and reducing energy usage
+                                on both the client and server sides.
+                            </p>
+                        </div>
+                    </div>
 
-            <h6>github ↗</h6>
-          </div>
-        </nav>
+                    <div class="row gap-xl">
+                        <div class="box column">
+                            <h4>timeless compatibility</h4>
+                            <p>
+                                CSS has been around for years and is reliable,
+                                even with newer technologies emerging. It's
+                                expected to continue being functional in the
+                                future. it works with literally anything.
+                            </p>
+                        </div>
+                        <div class="box column">
+                            <h4>responsive by nature</h4>
+                            <p>
+                                the optimal viewing experience on desktop,
+                                tablet, or mobile device. it is reducing the
+                                time and effort required to manually code for
+                                various device specifications.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div class="column gap-xl">
-          <div class="row gap-xl">
-            <div class="box column">
-              <h4>quickly "get it.” no weird stuff.</h4>
-              <p>
-                Ancient Egyptians, Greeks, and Romans wore them. In the 19th
-                century, French workers identified themselves by wearing them.
-                In the 1950s and 1960s, they gained popularity with actors,
-                musicians, and other celebrities.
-              </p>
-            </div>
-            <div class="box column">
-              <h4>achieving harmony in design and development</h4>
-              <p>
-                René is a CSS framework for styling clean, simple, lightweight
-                interfaces. It is the ultimate common ground for designers &
-                developers.
-              </p>
-            </div>
-          </div>
-
-          <div class="row gap-xl">
-            <div class="box column">
-              <h4>minimal design for maximum impact</h4>
-              <p>
-                Make small, targeted changes to your design's styles, which can
-                significantly impact your design's overall look and feel.
-              </p>
-              <ol>
-                <li>
-                  Element selectors target specific elements on a page and apply
-                  styles to them, meaning you’re using the styles simply by
-                  using the elements.
-                </li>
-                <li>
-                  Utility selectors make your CSS more modular and reusable -
-                  they keep your CSS code DRY (Don't Repeat Yourself) by
-                  avoiding the need to write the same styles repeatedly in
-                  different parts of your stylesheet.
-                </li>
-              </ol>
-            </div>
-            <div class="box column">
-              <h4>achieving harmony in design and development</h4>
-              <p>
-                Rene's is built with the theory of relativity in mind - The base
-                size is used as a reference point for anything else - The entire
-                layout system is applied relatively across everything and
-                everywhere.
-              </p>
-              <p>
-                Easily create and apply consistent sizes to your design's
-                styles. This simple and intuitive syntax is a vital part of what
-                makes Rene.css a valuable tool for building custom design
-                systems and creating responsive, scalable designs.
-              </p>
-            </div>
-          </div>
-
-          <div class="row gap-xl">
-            <div class="box column">
-              <h4>flexible customization with an extensible foundation</h4>
-              <p>
-                Using the rene.css framework as a starting point for your design
-                system can be valuable in creating a cohesive and consistent
-                look and feel for your project. It can save you time and effort
-                in the initial setup and allow you to focus on customizing and
-                extending the framework to meet your specific needs. By
-                leveraging the pre-existing code and structure of the framework,
-                you can create an efficient and effective design system.
-              </p>
-            </div>
-            <div class="box column">
-              <h4>flexible customization with an extensible foundation</h4>
-              <p>
-                René distinguishes itself from other modern web frameworks by
-                being designed to be lightweight, which results in faster
-                performance. This also means René consumes fewer resources,
-                which is ideal for slow connections and reducing energy usage on
-                both the client and server sides.
-              </p>
-            </div>
-          </div>
-
-          <div class="row gap-xl">
-            <div class="box column">
-              <h4>future-proofing for timeless compatibility</h4>
-              <p>
-                HTML has been around and is reliable, even with newer
-                technologies emerging. It's expected to continue being
-                functional in the future. it works with literally anything.
-              </p>
-            </div>
-            <div class="box column">
-              <h4>responsive by nature</h4>
-              <p>
-                HTML has been around and is reliable, even with newer
-                technologies emerging. It's expected to continue being
-                functional in the future. it works with literally anything.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <rnbw-footer></rnbw-footer>
-  </body>
-  <script src="https://rnbw.company/rnbw-banner.js"></script>
-  <script src="https://rnbw.company/rnbw-footer.js"></script>
+        <rnbw-footer></rnbw-footer>
+    </body>
+    <script src="https://rnbw.company/rnbw-banner.js"></script>
+    <script src="https://rnbw.company/rnbw-footer.js"></script>
 </html>
