--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script
             type="module"
             src="https://unpkg.com/@rainbowapp/svg-icon.js/dist/svg-icon.min.js"></script>
-        <title>Rene</title>
+        <title>rené</title>
     </head>
     <body>
         <rnbw-banner></rnbw-banner>
@@ -27,20 +27,20 @@
                     </h1>
                     <h3 class="text-center">
                         rené is a design system for styling clean, simple,
-                        lightweight interfaces. It is the ultimate common ground
-                        for designers & developers. is both a library and a
+                        lightweight interfaces. it's easy enough to quickly "get
+                        it.” no weird stuff. it is both a library and a
                         framework. as a library, it offers ready-to-use elements
-                        and styles. as a framework, it gives a consistent
-                        structure for building and styling your apps. It is
-                        fully customizable. it's easy enough to quickly "get
-                        it.” no weird stuff.
+                        and styles. as a framework, it gives a consistent and
+                        customizable structure for building and styling your
+                        apps. it is the ultimate common ground for designers and
+                        developers.
                     </h3>
                 </div>
             </div>
             <div class="page">
                 <nav class="box-l gap-xl">
                     <a
-                        href="./getting-started.html"
+                        href="./getting-started"
                         class="column radius-m padding-xl box-s gap-l color-primary"
                         style="color: white">
                         <div class="box">
@@ -51,7 +51,7 @@
                     </a>
 
                     <a
-                        href="./styleguide.html"
+                        href="./styleguide"
                         class="column color-secondary radius-m padding-xl box-s gap-l"
                         style="color: white">
                         <div class="box-l row justify-stretch gap-m">
@@ -72,71 +72,6 @@
                         <h6>github ↗</h6>
                     </div>
                 </nav>
-            </div>
-            <div class="page">
-                <div class="column gap-xl">
-                    <div class="row gap-xl">
-                        <div class="box column">
-                            <h4>both a library and a framework</h4>
-                            <p>
-                                as a library, it offers ready-to-use elements
-                                and styles. as a framework, it gives a
-                                consistent structure for building and styling
-                                your apps.
-                            </p>
-                        </div>
-                        <div class="box column">
-                            <h4>design and code harmony</h4>
-                            <p>
-                                René is a CSS framework for styling clean,
-                                simple, lightweight interfaces. It is the
-                                ultimate common ground for designers &
-                                developers.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row gap-xl">
-                        <div class="box column">
-                            <h4>flexible and extensible</h4>
-                            <p>
-                                it's built to adapt to different design needs,
-                                allowing you to tweak as needed. moreover, you
-                                can extend its functionalities, adding features
-                                or customizing existing.
-                            </p>
-                        </div>
-                        <div class="box column">
-                            <h4>more with less</h4>
-                            <p>
-                                rene is lightweight, which means faster
-                                performance and fewer resources, which is ideal
-                                for slow connections and reducing energy usage
-                                on both the client and server sides.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="row gap-xl">
-                        <div class="box column">
-                            <h4>timeless compatibility</h4>
-                            <p>
-                                CSS has been around for years and is reliable,
-                                even with newer technologies emerging. It's
-                                expected to continue being functional in the
-                                future. it works with literally anything.
-                            </p>
-                        </div>
-                        <div class="box column">
-                            <h4>responsive by nature</h4>
-                            <p>
-                                the optimal viewing experience on desktop,
-                                tablet, or mobile device. it is reducing the
-                                time and effort required to manually code for
-                                various device specifications.
-                            </p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
 
