--- a/styleguide.html
+++ b/styleguide.html
@@ -23,8 +23,8 @@
                         <div class="column gap-m text-l">
                             <a href="#features">getting started</a>
                             <a href="/about">styleguide</a>
-                            <a href="#Typography">↪ typography</a>
-                            <a href="#Colors">↪ colors</a>
+                            <a href="#typography">↪ typography</a>
+                            <a href="#colors">↪ colors</a>
                             <a href="#layout">↪ layout</a>
                             <a href="#shadows">↪ shadows</a>
                             <a href="#borders">↪ borders</a>
@@ -46,19 +46,20 @@
                 <div class="page">
                     <h1>styleguide</h1>
                     <h4>
-                        rene.css uses elements and class names as simple yet
-                        effective building blocks. it provides the essentials,
-                        helping designers to create diverse designs from minimal
-                        components. it's about getting more done with less.
+                        rené uses elements and class names as simple yet
+                        effective building blocks. it's about getting more done
+                        with less. it provides the essentials, helping designers
+                        and developers to create diverse designs from minimal
+                        components.
                     </h4>
                 </div>
 
-                <div class="page" id="Typography">
+                <div class="page" id="typography">
                     <h2>typography</h2>
                     <div class="row gap-xl">
                         <div class="box">
                             <p>
-                                rene's typography system is built around rem
+                                rené's typography system is built around rem
                                 units. this means that all font sizes are
                                 relative to the root element. it allows for
                                 consistency in design, making it look good on
@@ -347,7 +348,7 @@ h1 {
                     <div class="gap-xl row">
                         <div class="box">
                             <p>
-                                rene.css uses semantic colour naming. this means
+                                rené uses semantic colour naming. this means
                                 colours are named for their purpose, not their
                                 look. so, "error" or "error-red" could be names
                                 for colours used in messages.
@@ -650,6 +651,7 @@ h1 {
                             </p>
                         </div>
                     </div>
+
                     <div class="gap-xl row">
                         <div class="box align-start justify-start">
                             <div
@@ -690,11 +692,11 @@ h1 {
                         <div class="box align-start justify-start">
                             <div
                                 class="gap-s justify-start padding-m radius-m border align-center notification"
-                                data-clipboard-text=".page">
+                                data-clipboard-text=".sticky">
                                 <svg-icon
                                     src="https://raincons.rnbw.dev/icons/div.svg"
                                     class="icon-s"></svg-icon>
-                                <span>page</span>
+                                <span>sticky</span>
                             </div>
                         </div>
                         <div class="box">
@@ -708,11 +710,11 @@ h1 {
                         <div class="box align-start justify-start">
                             <div
                                 class="gap-s justify-start padding-m radius-m border align-center notification"
-                                data-clipboard-text=".page">
+                                data-clipboard-text=".hidden">
                                 <svg-icon
                                     src="https://raincons.rnbw.dev/icons/div.svg"
                                     class="icon-s"></svg-icon>
-                                <span>page</span>
+                                <span>hidden</span>
                             </div>
                         </div>
                         <div class="box">
@@ -727,11 +729,11 @@ h1 {
                         <div class="box align-start justify-start">
                             <div
                                 class="gap-s justify-start padding-m radius-m border align-center notification"
-                                data-clipboard-text=".page">
+                                data-clipboard-text=".scrollable">
                                 <svg-icon
                                     src="https://raincons.rnbw.dev/icons/div.svg"
                                     class="icon-s"></svg-icon>
-                                <span>page</span>
+                                <span>.scrollable</span>
                             </div>
                         </div>
                         <div class="box">
@@ -745,11 +747,11 @@ h1 {
                         <div class="box align-start justify-start">
                             <div
                                 class="gap-s justify-start padding-m radius-m border align-center notification"
-                                data-clipboard-text=".page">
+                                data-clipboard-text=".hidden-on-mobile">
                                 <svg-icon
                                     src="https://raincons.rnbw.dev/icons/div.svg"
                                     class="icon-s"></svg-icon>
-                                <span>page</span>
+                                <span>hidden-on-mobile</span>
                             </div>
                         </div>
                         <div class="box">
@@ -763,12 +765,12 @@ h1 {
                     <div class="gap-xl row">
                         <div class="box align-start justify-start">
                             <div
-                                class="gap-s justify-start padding-m radius-m border align-center notification"
-                                data-clipboard-text=".page">
+                                class="background-secondary gap-s justify-start padding-m radius-m border align-center notification"
+                                data-clipboard-text="<header></header>">
                                 <svg-icon
                                     src="https://raincons.rnbw.dev/icons/div.svg"
                                     class="icon-s"></svg-icon>
-                                <span>page</span>
+                                <span>header</span>
                             </div>
                         </div>
                         <div class="box">
@@ -781,12 +783,12 @@ h1 {
                     <div class="gap-xl row">
                         <div class="box align-start justify-start">
                             <div
-                                class="gap-s justify-start padding-m radius-m border align-center notification"
-                                data-clipboard-text=".page">
+                                class="background-secondary gap-s justify-start padding-m radius-m border align-center notification"
+                                data-clipboard-text="<nav></nav>">
                                 <svg-icon
                                     src="https://raincons.rnbw.dev/icons/div.svg"
                                     class="icon-s"></svg-icon>
-                                <span>page</span>
+                                <span>nav</span>
                             </div>
                         </div>
                         <div class="box">
@@ -796,33 +798,16 @@ h1 {
                             </p>
                         </div>
                     </div>
+
                     <div class="gap-xl row">
                         <div class="box align-start justify-start">
                             <div
-                                class="gap-s justify-start padding-m radius-m border align-center notification"
-                                data-clipboard-text=".page">
+                                class="background-secondary gap-s justify-start padding-m radius-m border align-center notification"
+                                data-clipboard-text="<footer></footer>">
                                 <svg-icon
                                     src="https://raincons.rnbw.dev/icons/div.svg"
                                     class="icon-s"></svg-icon>
-                                <span>page</span>
-                            </div>
-                        </div>
-                        <div class="box">
-                            <p>
-                                use 'nav' for main navigation links, directing
-                                users across the site.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="gap-xl row">
-                        <div class="box align-start justify-start">
-                            <div
-                                class="gap-s justify-start padding-m radius-m border align-center notification"
-                                data-clipboard-text=".page">
-                                <svg-icon
-                                    src="https://raincons.rnbw.dev/icons/div.svg"
-                                    class="icon-s"></svg-icon>
-                                <span>page</span>
+                                <span>footer</span>
                             </div>
                         </div>
                         <div class="box">
@@ -848,12 +833,30 @@ h1 {
                         </div>
                         <div class="box">
                             <p>
+                                use box when you want to stack items in a
+                                specific way, offering flexibility in arranging
+                                your content.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="gap-xl row">
+                        <div class="box align-start justify-start">
+                            <div
+                                class="gap-s justify-start padding-m radius-m border align-center notification"
+                                data-clipboard-text="<hr>">
+                                <svg-icon
+                                    src="https://raincons.rnbw.dev/icons/div.svg"
+                                    class="icon-s"></svg-icon>
+                                <span>hr</span>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <p>
                                 use 'hr' to separate sections or elements
                                 visually, improving content readability.
                             </p>
                         </div>
                     </div>
-
                     <div class="row gap-m">
                         <div class="box border padding-xl radius-s"></div>
                     </div>
